Ticket #27909: Ensure that toolbar buttons are displayed vertical, when the toolbar is collapsed horizontal.

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -2525,6 +2525,11 @@ div.treeNode.treeSelected.dndInsertInto {
 	align-items: center;
 }
 
+.cCollapsibleHorizontal .cCollapsibleButtons {
+	flex-direction: column;
+	gap: 5px;
+}
+
 .cCollapsibleHorizontal .cCollapsibleButtons .cButton {
     margin-left: 0;
 }
